[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/AddSong.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/dark_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/light_icon.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="AddSong" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -680.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="AddSongContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="AddSongContainer"]
unique_name_in_owner = true
margin_right = 229.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Name"

[node name="AuthorLineEdit" type="LineEdit" parent="AddSongContainer"]
unique_name_in_owner = true
margin_left = 245.0
margin_right = 475.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Author"

[node name="AlbumLineEdit" type="LineEdit" parent="AddSongContainer"]
unique_name_in_owner = true
margin_left = 491.0
margin_right = 721.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Album"

[node name="AddSongButton" type="Button" parent="AddSongContainer"]
margin_left = 737.0
margin_right = 967.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add song"

[node name="SearchSongLineEdit" type="LineEdit" parent="AddSongContainer"]
margin_left = 983.0
margin_right = 1213.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Search"

[node name="ThemeButton" type="CheckButton" parent="AddSongContainer"]
visible = false
margin_left = 1098.0
margin_right = 1149.0
margin_bottom = 51.0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/hover_pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
pressed = true

[node name="ThemeButton2" type="CheckButton" parent="AddSongContainer"]
margin_left = 1229.0
margin_right = 1280.0
margin_bottom = 51.0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/hover_pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
pressed = true

[connection signal="pressed" from="AddSongContainer/AddSongButton" to="." method="_on_AddSongButton_pressed"]
[connection signal="toggled" from="AddSongContainer/ThemeButton" to="." method="_on_ThemeButton_toggled"]
[connection signal="toggled" from="AddSongContainer/ThemeButton2" to="." method="_on_ThemeButton2_toggled"]
